--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,8 @@
       se passe dans la matière. C’est une technologie matérielle. Je suis un
       manuel.</p>
     </article>
+
+    <!-- footnotes -->
     <footer>
       <ol>
        <li id="media">Le rôle des médias de masse dans la société moderne ne peut être surestimé. </li>
