--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="./assets/css/reset.css">
+  <title>Mémoire Création numérique</title>
   <meta name="description" content="">
 
   <meta property="og:title" content="">
@@ -20,11 +19,24 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
 <body>
 
-  <a href="2024/">2024</a>
+    <section class="container">
+
+        <div class="navigation">
+            <a href="/">Archive des mémoires du master Création numérique</a>
+        </div>
+
+        <div class="content">
+            <a href="/2024">2024</a>
+
+        </div>
+
+    </section>
 
 </body>
 
