--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
         </div>
 
         <div class="content">
-            <a href="/2024">2024</a>
-
+            <h1>2024</h1>
+                <ul>
+                    <li><a href="/2024/alfea-morelli/">Alféa Morelli</a></li>
+                    <li><a href="/2024/heloise-debrand/">Héloïse Debrand</a></li>
+                    <li><a href="/2024/julien-dzviga/">Julien Dzviga</a></li>
+                    <li><a href="/2024/maelys-bard/">Maelys Bard</a></li>
+                    <li><a href="/2024/si-keting/">Si Keting</a></li>
+                </ul>
+            </div>
         </div>
 
     </section>
