--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
 
         <div class="content">
+            <h1>2025</h1>
+                <ul>
+                    <li>Sarah Boutière <a href="/2025/sarah-boutiere/">HTML</a> <a href="/2025/sarah-boutiere/presence_fantome-SarahBoutiere.pdf">PDF</a></li>
+                    <li>Ludovic Hohl <a href="/2025/ludovic-hohl/">HTML</a> <a href="/2025/ludovic-hohl/Hohl_Ludovic_Mémoire_2024_2025.pdf">PDF</a></li>
+                </ul>
             <h1>2024</h1>
                 <ul>
                     <li><a href="/2024/alfea-morelli/">Alféa Morelli</a></li>
@@ -40,7 +45,6 @@
                     <li><a href="/2024/maelys-bard/">Maelys Bard</a></li>
                     <li><a href="/2024/si-keting/">Si Keting</a></li>
                 </ul>
-            </div>
         </div>
 
     </section>
