--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <ul>
                     <li>Sarah Boutière <a href="/2025/sarah-boutiere/">HTML</a> <a href="/2025/sarah-boutiere/presence_fantome-SarahBoutiere.pdf">PDF</a></li>
                     <li>Ludovic Hohl <a href="/2025/ludovic-hohl/">HTML</a> <a href="/2025/ludovic-hohl/Hohl_Ludovic_Mémoire_2024_2025.pdf">PDF</a></li>
+                    <li>Maxence Mardargent <a href="/2025/maxence-mardargent/">HTML</a> <a href="/2025/maxence-mardargent/maxence-mardargent-tu-prendrais-bien-un-cookie.pdf">PDF</a></li>
                 </ul>
             <h1>2024</h1>
                 <ul>
