index retravaillé avec tableau

--- a/index.html
+++ b/index.html
@@ -27,31 +27,144 @@
 
     <section class="container">
 
-        <div class="navigation">
-            <a href="/">Archive des mémoires du master Création numérique</a>
-        </div>
+        <ul class="navigation">
+            <li><a href="/">Archive des mémoires Dnsep Esadse</a></li>
+            <li><a href="/2025">2025</a> <a href="/2024">2024</a></li>
+        </ul>
 
         <div class="content">
-            <h1>2025</h1>
-                <ul>
-                    <li>Erwan Acas <a href="/2025/erwan-acas/">HTML</a> <a href="/2025/erwan-acas/erwan-acas-apercu-de-la-notion-de-cyborg.pdf">PDF</a></li>
-                    <li>Sarah Boutière <a href="/2025/sarah-boutiere/">HTML</a> <a href="/2025/sarah-boutiere/presence_fantome-SarahBoutiere.pdf">PDF</a></li>
-                    <li>Benoît Fage <a href="/2025/benoit-fage/">HTML</a> <a href="/2025/benoit-fage/benoit-fage-au-travers-des-manifestes-numeriques.pdf">PDF</a></li>
-                    <li>Haïk GH Arakelian <a href="/2025/haik-gh-arakelian/">HTML</a> <a href="/2025/haik-gh-arakelian/haik-gh-arakelian-a-propos-du-tapis-armenien.pdf">PDF</a></li>
-                    <li>Pablo Haddadou <a href="/2025/pablo-haddadou/">HTML</a> <a href="/2025/pablo-haddadou/pablo-haddadou-xyz.pdf">PDF</a></li>
-                    <li>Gabriel Lecurieux <a href="/2025/gabriel-lecurieux/">HTML</a> <a href="/2025/gabriel-lecurieux/gabriel-lecurieux-anima-aether-escopia.pdf">PDF</a> <a href="/2025/gabriel-lecurieux/experimental/">HTML/XP</a></a></li>
-                    <li>Ludovic Hohl <a href="/2025/ludovic-hohl/">HTML</a> <a href="/2025/ludovic-hohl/Hohl_Ludovic_Mémoire_2024_2025.pdf">PDF</a></li>
-                    <li>Maxence Mardargent <a href="/2025/maxence-mardargent/">HTML</a> <a href="/2025/maxence-mardargent/maxence-mardargent-tu-prendrais-bien-un-cookie.pdf">PDF</a></li>
-                    <li>Yutin Xie <a href="/2025/yuting-xie/yuting-xie-Ego-Compression-in-Digital-Culture.pdf">PDF</a></li>
-                </ul>
-            <h1>2024</h1>
-                <ul>
-                    <li><a href="/2024/alfea-morelli/">Alféa Morelli</a></li>
-                    <li><a href="/2024/heloise-debrand/">Héloïse Debrand</a></li>
-                    <li><a href="/2024/julien-dzviga/">Julien Dzviga</a></li>
-                    <li><a href="/2024/maelys-bard/">Maelys Bard</a></li>
-                    <li><a href="/2024/si-keting/">Si Keting</a></li>
-                </ul>
+
+            <header class="header">
+                <div>Nom</div>
+                <div>Titre</div>
+                <div>Année</div>
+                <div>Mention</div>
+                <div>HTML</div>
+                <div>PDF</div>
+            </header>
+
+            <section class="detail">
+                <div>Erwan Acas</div>
+                <div>Aperçu de la notion de Cyborg, context d'apparition et déclinaison contemporaine</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/erwan-acas/" target="_blank">Lien</a></div>
+                <div><a href="/2025/erwan-acas/erwan-acas-apercu-de-la-notion-de-cyborg.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Haïk GH Arakelian</div>
+                <div>À Propos du Tapis Arménien</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/haik-gh-arakelian/" target="_blank">Lien</a></div>
+                <div><a href="/2025/haik-gh-arakelian/haik-gh-arakelian-a-propos-du-tapis-armenien.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Maelys Bard</div>
+                <div>Gouf temporel</div>
+                <div><a href="/2024">2024</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2024/maelys-bard/" target="_blank">Lien</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Sarah Boutière</div>
+                <div>Présence fantôme</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/sarah-boutiere/" target="_blank">Lien</a></div>
+                <div><a href="/2025/sarah-boutiere/presence_fantome-SarahBoutiere.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Héloïse Debrand</div>
+                <div>Des internets locaux et ornés, soutenables énergétiquement pas visuellement</div>
+                <div><a href="/2024">2024</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2024/heloise-debrand/" target="_blank">Lien</a></div>
+            </section>
+
+            <section class="detail">
+                <div>JuLien Dzviga</div>
+                <div>L'épitexte du jeu vidéo</div>
+                <div><a href="/2024">2024</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2024/juLien-dzviga/" target="_blank">Lien</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Benoît Fage</div>
+                <div>Au travers des Manifestes numériques</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/benoit-fage/" target="_blank">Lien</a></div>
+                <div><a href="/2025/benoit-fage/benoit-fage-au-travers-des-manifestes-numeriques.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Pablo Haddadou</div>
+                <div>XYZ</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/pablo-haddadou/" target="_blank">Lien</a></div>
+                <div><a href="/2025/pablo-haddadou/pablo-haddadou-xyz.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Ludovic Hohl</div>
+                <div>L'outil jeu vidéo</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/ludovic-hohl/" target="_blank">Lien</a></div>
+                <div><a href="/2025/ludovic-hohl/Hohl_Ludovic_Mémoire_2024_2025.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Gabriel Lecurieux</div>
+                <div>Anima Aether EsCopia</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/gabriel-lecurieux/" target="_blank">Lien</a> <a href="/2025/gabriel-lecurieux/experimental/" target="_blank">XP</a></div>
+                <div><a href="/2025/gabriel-lecurieux/gabriel-lecurieux-anima-aether-escopia.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Maxence Mardargent</div>
+                <div>Tu prendrais bien un cookie ?</div>
+                <div><a href="/2025">2025</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2025/maxence-mardargent/" target="_blank">Lien</a></div>
+                <div><a href="/2025/maxence-mardargent/maxence-mardargent-tu-prendrais-bien-un-cookie.pdf">Fichier</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Alféa Morelli</div>
+                <div>Transition de genre, de la pop à l'hyperpop</div>
+                <div><a href="/2024">2024</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2024/alfea-morelli/" target="_blank">Lien</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Si Keting</div>
+                <div>Research on VJ Practices in the Chinese Context</div>
+                <div><a href="/2024">2024</a></div>
+                <div>Création numérique</div>
+                <div><a href="/2024/alfea-morelli/" target="_blank">Lien</a></div>
+            </section>
+
+            <section class="detail">
+                <div>Yutin Xie</div>
+                <div>Human.zip: Ego Compression in Digital Culture</div>
+                <div><a href="/2025">2024</a></div>
+                <div>Création numérique</div>
+                <div></div>
+                <div><a href="/2025/yuting-xie/yuting-xie-Ego-Compression-in-Digital-Culture.pdf">Fichier</a></div>
+            </section>
+
+
         </div>
 
     </section>
